fix mobile spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -190,7 +190,7 @@ pre code {
 
 .nn_hero {
   background: rgba(0, 0, 0, 0.035);
-  padding: 30px;
+  padding: 30px 0;
   border-radius: 5px;
 
   & h1 {
